[metadata]
name = mimicfouretl
version = 0.1.0
description = A package for ETL processes on the MIMIC-IV dataset
authors = Dunya Oguz, Kevin Menear
author_email = dunya.oguz@mail.mcgill.ca, kevin.menear@gmail.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    pandas
    numpy
    pyspark
    scikit-learn
    xgboost
    matplotlib
    seaborn
    jupyterlab
    ipywidgets
package_dir=
    =src

[options.packages.find]
where=src